Created directories and modified endpoints for views.

--- a/src/main/resources/templates/entries/addEntry.html
+++ b/src/main/resources/templates/entries/addEntry.html
@@ -5,7 +5,7 @@
 <body class="container">
 <nav th:replace="fragments :: navigation"></nav>
 <h2 th:replace="fragments :: title"></h2>
-<form class="form-horizontal" method="post" action="/allEntries">
+<form class="form-horizontal" method="post" action="/entries/allEntries">
     <label>Enter water intake for today: </label>
     <input class="form-control" type="text" name="dailyWaterLog">
     <label>How are you feeling today? </label>
