--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 <body class="container" style="font-family: 'Montserrat', sans-serif; background: #f5f5f5;">
 <nav style="padding-bottom: 40px;">
-    <h1 style="font-weight: bold; display: inline-block; padding: 30px;">Feel</h1>
+    <h1 style="font-weight: bold; display: inline-block; padding-top: 30px;">Feel</h1>
     <ul style="display: inline-flex; float: right; padding: 50px;">
         <li class="nav-item" style="padding-right: 20px; list-style-type: none;"><a class="nav-link" href="/">Home </a></li>
         <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/register">Register User </a></li>
