--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -4,6 +4,7 @@
 </head>
 <body class="container">
 <nav th:replace="fragments :: navigation"></nav>
+<div class="entries-table">
 <h2 th:replace="fragments :: title"></h2>
 <table class="table table-striped">
     <thead>
@@ -15,6 +16,7 @@
         <td ><a class="detail-link" th:href="'/entries/detail?entryId= ' + ${entry.id}" th:text="${entry.today}"></a></td>
     </tr>
 </table>
+</div>
 <a href="/delete">Delete An Entry</a>
 </body>
 <footer th:replace="fragments :: footer"></footer>
