--- a/src/main/resources/templates/entries/detail.html
+++ b/src/main/resources/templates/entries/detail.html
@@ -23,6 +23,7 @@
             <td th:text="${entry.detailedEntry}"></td>
         </tr>
 </table>
+<button class="back-button"><a href="/entries/allEntries">Back</a></button>
 </body>
 <footer th:replace="fragments :: footer"></footer>
 </html>
