--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,10 +21,11 @@
 <h2 th:fragment = "title" th:text="${title}"></h2>
 
 </body>
-<footer th:fragment = "footer" class="footer" style="display: grid;
-    grid-template-columns: auto auto auto;">
+<footer th:fragment = "footer" class="footer">
     <div class="footer-item">
-        <h5><a class="footer-link" href="/links/contact">Contact Us</a></h5>
+        <h5>Contact</h5>
+        <a class="footer-link" href="https://www.linkedin.com/in/beth-marshall-philadelphia/">LinkedIn</a>
+        <p class="footer-link">bethmarsh1018@gmail.com</p>
     </div>
     <div class="footer-item">
         <h5><a class="footer-link" href="/links/about">About Us</a></h5>
