--- a/src/main/resources/templates/check-needs.html
+++ b/src/main/resources/templates/check-needs.html
@@ -1,46 +1,111 @@
-<html lang="en" xmlns:th="https://www.thymeleaf.org/" >
+<!DOCTYPE html>
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <!--    <link rel="stylesheet" th:href="@{/styles.css}">-->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+            crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+            rel="stylesheet"
+    />
+    <style>
+      * {
+        font-family: "Montserrat", sans-serif;
+      }
+      .background-image {
+        height: 100vh;
+        width: 100%;
+        position: absolute;
+      }
+      .navbar,
+      .form {
+        position: relative;
+      }
+
+      .form {
+        margin: 70px;
+        font-size: 1.3em;
+      }
+      .instructions {
+        height: 400px;
+        width: 400px;
+        margin-left: 120px;
+      }
+
+    </style>
+    <title>Feel</title>
 </head>
-<body class="container" style="background: #10293e; font-family: 'Montserrat', sans-serif;">
-<div class="background">
-    <image class="background-image" th:src="@{/img/water-drop-image.jpg}" style="position: absolute; left: 0; height: 80%; width: 100%;" alt="water-drop-image">
-        <nav style="padding-bottom: 40px; position: relative;">
-            <h1 style="font-weight: bold; display: inline-block; padding: 30px;"> Welcome to Feel</h1>
-            <ul style="display: inline-flex; float: right; padding: 30px;">
-                <li class="nav-item" style="padding-right: 20px; list-style-type: none;"><a class="nav-link" href="/">Home </a></li>
-                <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/register">Register User </a></li>
-                <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/login">User Login </a></li>
-                <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/logout">Logout </a></li>
-            </ul>
-        </nav>
-        <div class="quote-container"  style="display: block; position: relative; align-items: center; justify-content: center; text-align: center;">
-            <h4>To find out how much water you should drink every day, enter your weight and how many minutes on average you exercise on a given day.</h4>
+<body>
+<image class="background-image" th:src="@{/img/water-drop-image.jpg}">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Welcome to Feel</a>
+            <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+                    class="collapse navbar-collapse d-flex justify-content-end"
+                    id="navbarNav"
+            >
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Register</a>
+                    </li>
+
+                </ul>
+            </div>
         </div>
-        <div style="display: block; position: absolute; margin: 150px 20%; align-items: center; width: 40%; justify-content: center; padding: 0px 130px; line-height: 1.5; color: #e0eaef; font-weight: 400; font-size: x-large;
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;">
-            <form class="teaser-form" method = "post" action="/water-needs-teaser" style="width: 400px; height: 275px;">
-                <div class="form-group" style="padding: 10px;">
-                    <label>Enter weight: </label>
-                    <input class="form-control" th:field="${waterNeeds.weight}">
-                </div>
-                <div class="form-group" style="padding: 10px;">
-                    <label>Enter how many minutes a day you exercise: </label>
-                    <input class="form-control" th:field="${waterNeeds.dailyActivityTime}">
-                </div>
-                <div class="form-group" style="padding: 10px;">
-                    <input type = "submit" value="Calculate Water Needs">
-                </div>
-            </form>
-        </div>
-    </image>
-
-</div>
-
-
+    </nav>
+    <div class="container form d-flex flex-wrap justify-content-between">
+        <h4 class="instructions">
+            To find out how much water you should drink every day, enter your
+            weight and how many minutes on average you exercise on a given day.
+        </h4>
+        <form method="post" action="/water-needs-teaser">
+            <div class="mb-3 form-group">
+                <label class="form-label">Enter weight: </label>
+                <input class="form-control" th:field="${waterNeeds.weight}" />
+            </div>
+            <div class="mb-3 form-group">
+                <label class="form-label"
+                >Enter how many minutes per day you exercise:
+                </label>
+                <input
+                        class="form-control"
+                        th:field="${waterNeeds.dailyActivityTime}"
+                />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Calculate Water Needs"/>
+            </div>
+<!--            <button type="submit" class="btn btn-outline-light btn-lg">-->
+<!--                Calculate Water Needs-->
+<!--            </button>-->
+        </form>
+    </div>
+</image>
 </body>
 </html>
