Updated teaser layout

--- a/src/main/resources/templates/check-needs.html
+++ b/src/main/resources/templates/check-needs.html
@@ -48,7 +48,7 @@
 <image class="background-image" th:src="@{/img/water-drop-image.jpg}">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Welcome to Feel</a>
+            <h1 class="navbar-brand" href="#">Welcome to Feel</h1>
             <button
                     class="navbar-toggler"
                     type="button"
@@ -101,9 +101,6 @@
             <div class="form-group">
                 <input type="submit" value="Calculate Water Needs"/>
             </div>
-<!--            <button type="submit" class="btn btn-outline-light btn-lg">-->
-<!--                Calculate Water Needs-->
-<!--            </button>-->
         </form>
     </div>
 </image>
