--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -17,7 +17,7 @@
     </tr>
 </table>
 </div>
-<a href="/delete">Delete An Entry</a>
+<a href="/entries/delete">Delete An Entry</a>
 </body>
 <footer th:replace="fragments :: footer"></footer>
 </html>
