--- a/src/main/resources/templates/water-needs-teaser.html
+++ b/src/main/resources/templates/water-needs-teaser.html
@@ -1,33 +1,147 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/" >
 <head th:fragment="head">
-    <meta charset="UTF-8"/>
-    <title>Coding Events</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <!--    <link rel="stylesheet" th:href="@{/styles.css}">-->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-</head>
-<body style="font-family: 'Montserrat', sans-serif; background: #f5f5f5;">
-<nav style="padding-bottom: 40px;">
-    <h1 style="font-weight: bold; display: inline-block; padding: 30px;">Feel</h1>
-    <ul style="display: inline-flex; float: right; padding: 50px;">
-        <li class="nav-item" style="padding-right: 20px; list-style-type: none;"><a class="nav-link" href="/">Home </a></li>
-        <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/register">Register User </a></li>
-        <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/login">User Login </a></li>
-        <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/logout">Logout </a></li>
-    </ul>
-</nav>
-<div style="display: grid; grid-template-columns: auto auto;">
-    <div style="background: #3785B9; border-radius: 50px; margin: 0px 20px 300px 200px; width: min-content; padding: 50px; text-align: center; font-size: xx-large;">
-        <p style="font-weight: bold;" th:text="${waterNeeds}"></p>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Feel</title>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
+        <link
+                rel="stylesheet"
+                href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+        />
+        <!--    <link rel="stylesheet" th:href="@{/styles.css}">-->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+                href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+                rel="stylesheet"
+        />
+
+        <style>
+      body {
+        font-family: "Montserrat", sans-serif;
+        background: #f5f5f5;
+      }
+      .description {
+        padding: 60px 50px;
+      }
+      .feel-description {
+        font-size: large;
+      }
+      .link {
+        color: #54b4d3;
+      }
+      .logo {
+        font-weight: bold;
+        color: #54b4d3;
+        font-size: larger;
+      }
+      .navbar {
+        margin: 40px;
+      }
+      .water-display {
+        border-radius: 10%;
+        padding-top: 70px;
+        margin-left: 200px;
+        height: 225px;
+        width: 325px;
+        box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+          rgba(0, 0, 0, 0.23) 0px 6px 6px;
+      }
+    </style>
+    </head>
+<body>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <h1 class="display-6" href="#">
+            Welcome to <span class="logo">Feel</span>
+        </h1>
+        <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+        >
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+                class="collapse navbar-collapse d-flex justify-content-end"
+                id="navbarNav"
+        >
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div style="border: 1px solid black; border-radius: 50px; width: 60%; height: 95%; margin: 0 auto; padding: 30px 50px; background: #10293E; color: white;">
-        <p style="font-size: x-large;">When you create an account with <span style="font-weight: bold; color: #87F6FE; font-size: larger;">Feel</span>, you can easily keep track of your daily water intake.
-            Our intake of water is associated with all aspects of a healthy life, our mental health and our
-            physical well-being. When we don't drink enough water, our health suffers.<br/>
-            With <span style="font-weight: bold; color: #87F6FE; font-size: larger;">Feel</span>, you  make a daily practice of recording your water intake with the option of also tracking your moods, and perhaps you may discover a connection.
-            Go a step further and track your personal goals by creating profile. Existing users <a href="/login" style="color: #87F6FE;">Login here.</a> New users <a href="/register" style="color: #87F6FE;">Register here.</a>
+</nav>
+<div
+        class="
+        description
+        row row-cols-1 row-cols-md-2
+        align-items-md-center
+        g-5
+        py-5
+      "
+>
+    <div class="col d-flex flex-column align-items-start gap-2">
+        <h2 class="fw-bold text-body-emphasis">
+            What <span class="logo">Feel</span> Can Do For You
+        </h2>
+        <p class="feel-description">
+            When you create an account with
+            <span class="logo">Feel</span>, you can easily keep track of your
+            daily water intake. Our intake of water is associated with all aspects
+            of a healthy life, our mental health and our physical well-being. When
+            we don't drink enough water, our health suffers.<br />
+            With
+            <span class="logo">Feel</span>, you make a daily practice of recording
+            your water intake with the option of also tracking your moods, and
+            perhaps you may discover a connection. Go a step further and track
+            your personal goals by creating profile. Existing users
+            <a class="link" href="/login">Login here.</a>
+            New users
+            <a class="link" href="/register">Register here.</a>
         </p>
+    </div>
+    <div class="col">
+        <div class="row row-cols-1 row-cols-sm-2 g-4">
+            <div class="col water-display d-flex gap-2">
+                <div>
+                    <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="50"
+                            height="50"
+                            fill="currentColor"
+                            class="bi bi-droplet"
+                            viewBox="0 0 16 16"
+                    >
+                        <path
+                                fill-rule="evenodd"
+                                d="M7.21.8C7.69.295 8 0 8 0c.109.363.234.708.371 1.038.812 1.946 2.073 3.35 3.197 4.6C12.878 7.096 14 8.345 14 10a6 6 0 0 1-12 0C2 6.668 5.58 2.517 7.21.8zm.413 1.021A31.25 31.25 0 0 0 5.794 3.99c-.726.95-1.436 2.008-1.96 3.07C3.304 8.133 3 9.138 3 10a5 5 0 0 0 10 0c0-1.201-.796-2.157-2.181-3.7l-.03-.032C9.75 5.11 8.5 3.72 7.623 1.82z"
+                        />
+                        <path
+                                fill-rule="evenodd"
+                                d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448z"
+                        />
+                    </svg>
+                </div>
+                <h4
+                        class="fw-semibold mb-0 text-body-emphasis"
+                        th:text="${waterNeeds}"
+                ></h4>
+            </div>
+        </div>
     </div>
 </div>
 </body>
