--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,21 +6,91 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <!--    <link rel="stylesheet" th:href="@{/styles.css}">-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: "Montserrat", sans-serif;
+            background: #f5f5f5;
+            }
+        .main-container {
+            margin-top: 30px;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            }
+        q {
+            font-size: x-large;
+            text-align: center;
+           }
+
+        .login-container {
+            padding: 20px;
+            }
+        footer {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        background-color: #0e2132;
+        justify-content: space-around;
+        color: white;
+        padding-top: 30px;
+}
+    .footer-link {
+        color: #f5f5f5;
+        }
+        .logo {
+        font-weight: bold;
+        color: #448ec1;
+        font-size: larger;
+      }
+      .navbar {
+        margin: 40px;
+      }
+    </style>
 </head>
-<body class="container" style="font-family: 'Montserrat', sans-serif; background: #f5f5f5;">
-<nav style="padding-bottom: 40px;">
-    <h1 style="font-weight: bold; display: inline-block; padding-top: 30px;">Feel</h1>
-    <ul style="display: inline-flex; float: right; padding: 50px;">
-        <li class="nav-item" style="padding-right: 20px; list-style-type: none;"><a class="nav-link" href="/">Home </a></li>
-        <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/register">Register User </a></li>
-        <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/login">User Login </a></li>
-        <li class="nav-item" style="padding-right: 20px"><a class="nav-link" href="/logout">Logout </a></li>
-    </ul>
+<body class="container">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <h1 class="display-6" href="#">
+            Welcome to <span class="logo">Feel</span>
+        </h1>
+        <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+        >
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+                class="collapse navbar-collapse d-flex justify-content-end"
+                id="navbarNav"
+        >
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
-<main id="login-holder">
-    <q style="font-size: x-large; text-align: center;">In time and with water, everything changes.</q><p> -Leonardo da Vinci</p>
-    <h3 id="login-header-second">Login to start tracking your mood</h3>
-    <form method="post" id="login-form" style="margin-top: 40px;">
+<div class="main-container">
+    <div class="quote-container">
+        <q>In time and with water, everything changes.</q><p> -Leonardo da Vinci</p>
+    </div>
+    <div class="login-container">
+    <h3>Login to start tracking your mood</h3>
+    <form method="post" id="login-form">
         <div class="form-group row">
             <lable class="col-sm-2 col-form-label">Username</lable>
             <div class="col-sm-10">
@@ -37,20 +107,22 @@
         </div>
         <input type="submit" value="Login" id="login">
     </form>
+        <p type="button" id="sign-up">New users<a href="/register"> Register here</a></p>
+    </div>
 
-    <p type="button" id="sign-up">New users<a href="/register"> Register here</a></p>
-</main>
+</div>
 </body>
-<footer style="width: 100%; display: grid;
-    grid-template-columns: auto auto auto; position: absolute; padding: 60px; background: #3785B9; bottom: 0; left: 0; ">
+<footer th:fragment = "footer" class="footer">
     <div class="footer-item">
-        <h5><a style="color: white;" href="/contact">Contact Us</a></h5>
+        <h5>Contact</h5>
+        <a class="footer-link" href="https://www.linkedin.com/in/beth-marshall-philadelphia/">LinkedIn</a>
+        <p class="footer-link">bethmarsh1018@gmail.com</p>
     </div>
     <div class="footer-item">
-        <h5><a style="color: white;" href="/about">About Us</a></h5>
+        <h5><a class="footer-link" href="/links/about">About Us</a></h5>
     </div>
-    <div>
-        <h5><a style="color: white;" href="/resources">Resources</a></h5>
+    <div class="footer-item">
+        <h5><a class="footer-link" href="/links/resources">Resources</a></h5>
     </div>
 </footer>
 </html>
