--- a/src/main/resources/templates/water-needs-teaser.html
+++ b/src/main/resources/templates/water-needs-teaser.html
@@ -38,27 +38,27 @@
         font-size: larger;
       }
       .navbar {
-        margin: 40px;
+        margin-top: 40px;
       }
       .water-display {
         border-radius: 10%;
         margin-left: 200px;
         height: 250px;
         width: 350px;
-        background-color: #2b7fb7;
+        background-color: #13314b;
         color: #f5f5f5;
         box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
       }
       footer {
-        width: 100%;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        display: flex;
-        background-color: #0e2132;
-        justify-content: space-around;
-        color: white;
-        padding-top: 30px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background: #3785B9;
+    padding: 40px;
+    color: white;
 }
     .footer-link {
         color: #f5f5f5;
