--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,7 +11,7 @@
 <body>
 <nav th:fragment = "navigation" class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <h1 class="navbar-brand" href="#">Feel</h1>
+        <h1 class="display-6" href="#">Welcome to <span class="logo">Feel</span></h1>
         <button
                 class="navbar-toggler"
                 type="button"
