--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 </head>
 <body class="container">
 <nav th:replace="fragments :: navigation"></nav>
-<h2 th:replace="fragments :: title"></h2>
+<!--<h2 th:replace="fragments :: title"></h2>-->
 <div class="greeting-container">
     <h2 th:text="${username}"></h2>
 </div>
